--- a/cmake/host-vars.cmake.example
+++ b/cmake/host-vars.cmake.example
@@ -1,8 +1,8 @@
 set(BAREMETAL_ARM_TOOLCHAIN_PATH
-	/home/aske/Semester/ESD/plnx-2017.4-arm-6.2.1/linux-i386/gcc-arm-linux-gnueabi/bin)
+	/home/marc/Embeddded/compiler/gcc-arm-linux-gnueabi/bin)
 
 set(ZYBO_USER "root")
-set(ZYBO_PASSWORD "42")
-set(ZYBO_IP "192.168.0.222")
+set(ZYBO_PASSWORD "root")
+set(ZYBO_IP "192.168.1.4")
 set(ZYBO_DEPLOY_DIR "~/deploy")
 
