Added stationbox code, with possible complete locking

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -1,3 +1,9 @@
+
+add_executable(stationboxTester stationbox.cpp)
+target_link_libraries(stationboxTester stationbox)
+
 add_executable(gpioExample gpioExample.cpp)
 target_link_libraries(gpioExample GPIO)
 add_deploy_target(gpioExample)
+
+
