--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,2 +1,5 @@
 add_subdirectory(driver)
+add_library(stationbox stationBox.cpp)
+target_include_directories(stationbox PUBLIC ${PROJECT_SOURCE_DIR}/include)
+
 
