add Event + examples

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -6,4 +6,6 @@ add_executable(gpioExample gpioExample.cpp)
 target_link_libraries(gpioExample GPIO)
 add_deploy_target(gpioExample)
 
-
+# event_example.cpp
+add_executable(event_example event_example.cpp)
+target_link_libraries(event_example Event)
