add Task + examples

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -9,3 +9,7 @@ add_deploy_target(gpioExample)
 # event_example.cpp
 add_executable(event_example event_example.cpp)
 target_link_libraries(event_example Event)
+
+# task_example.cpp
+add_executable(task_example task_example.cpp)
+target_link_libraries(task_example Task)
