--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -13,3 +13,7 @@ target_link_libraries(event_example Event)
 # task_example.cpp
 add_executable(task_example task_example.cpp)
 target_link_libraries(task_example Task)
+
+add_executable(TouchDisplayExample TouchDisplayExample.cpp)
+target_include_directories(TouchDisplayExample  PUBLIC ${PROJECT_SOURCE_DIR}/include)
+target_link_libraries(TouchDisplayExample TouchDisplay)
