--- a/src/gui/CMakeLists.txt
+++ b/src/gui/CMakeLists.txt
@@ -1,3 +1,3 @@
-add_library(TouchDisplay TouchDisplay.cpp Button.cpp)
+add_library(TouchDisplay TouchDisplay.cpp Button.cpp DynamicReceipt.cpp)
 target_include_directories(TouchDisplay  PUBLIC ${PROJECT_SOURCE_DIR}/include)
-target_link_libraries(TouchDisplay SDL2 ${SDL2_TTF_LIBRARIES})
+target_link_libraries(TouchDisplay SDL2 ${SDL2_TTF_LIBRARIES} Receipt)
