--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -6,21 +6,18 @@ add_executable(gpioExample gpioExample.cpp)
 target_link_libraries(gpioExample GPIO)
 add_deploy_target(gpioExample)
 
-# event_example.cpp
-add_executable(event_example event_example.cpp)
-target_link_libraries(event_example Event)
+add_executable(EventExample EventExample.cpp)
+target_link_libraries(EventExample Event)
 
-# task_example.cpp
-add_executable(task_example task_example.cpp)
-target_link_libraries(task_example Task)
+add_executable(TaskExample TaskExample.cpp)
+target_link_libraries(TaskExample Task)
 
-add_executable(display_example display_example.cpp)
-target_link_libraries(display_example DisplayDriver)
+add_executable(DisplayExample DisplayExample.cpp)
+target_link_libraries(DisplayExample DisplayDriver)
 
-add_executable(display_task_example display_task_example.cpp)
-target_link_libraries(display_task_example DisplayDriverTask)
-
+add_executable(DisplayTaskExample DisplayTaskExample.cpp)
+target_link_libraries(DisplayTaskExample DisplayDriverTask)
 
 add_executable(TouchDisplayExample TouchDisplayExample.cpp)
-target_include_directories(TouchDisplayExample  PUBLIC ${PROJECT_SOURCE_DIR}/include)
+target_include_directories(TouchDisplayExample PUBLIC ${PROJECT_SOURCE_DIR}/include)
 target_link_libraries(TouchDisplayExample TouchDisplay)
