Removed marc stuff

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -23,12 +23,12 @@ add_deploy_target(ExampleReceiptPrinterTask)
 
 
 
-#add_executable(DisplayExample DisplayExample.cpp)
-#target_link_libraries(DisplayExample DisplayDriver)
+add_executable(DisplayExample DisplayExample.cpp)
+target_link_libraries(DisplayExample DisplayDriver)
 
-#add_executable(DisplayTaskExample DisplayTaskExample.cpp)
-#target_link_libraries(DisplayTaskExample DisplayDriverTask)
+add_executable(DisplayTaskExample DisplayTaskExample.cpp)
+target_link_libraries(DisplayTaskExample DisplayDriverTask)
 
-#add_executable(TouchDisplayExample TouchDisplayExample.cpp)
-#target_include_directories(TouchDisplayExample PUBLIC ${PROJECT_SOURCE_DIR}/include)
-#target_link_libraries(TouchDisplayExample TouchDisplay)
+add_executable(TouchDisplayExample TouchDisplayExample.cpp)
+target_include_directories(TouchDisplayExample PUBLIC ${PROJECT_SOURCE_DIR}/include)
+target_link_libraries(TouchDisplayExample TouchDisplay)
