--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,5 @@
-#add_subdirectory(driver)
-#add_library(stationbox stationBox.cpp)
-#target_include_directories(stationbox PUBLIC ${PROJECT_SOURCE_DIR}/include)
+add_library(stationbox stationBox.cpp)
+target_include_directories(stationbox PUBLIC ${PROJECT_SOURCE_DIR}/include)
 
 add_library(Event Event.cpp)
 target_include_directories(Event PUBLIC ${PROJECT_SOURCE_DIR}/include)
@@ -13,13 +12,13 @@ add_library(receiptPrinterTask ReceiptPrinterTask.cpp)
 target_include_directories(receiptPrinterTask PUBLIC ${PROJECT_SOURCE_DIR}/include)
 target_link_libraries(receiptPrinterTask Task receiptPrinterDriver)
 
-#add_library(DisplayDriver DisplayDriver.cpp)
-#target_include_directories(DisplayDriver PUBLIC ${PROJECT_SOURCE_DIR}/include ${serialib_INCLUDE_DIR})
-#target_link_libraries(DisplayDriver serialib)
+add_library(DisplayDriver DisplayDriver.cpp)
+target_include_directories(DisplayDriver PUBLIC ${PROJECT_SOURCE_DIR}/include ${serialib_INCLUDE_DIR})
+target_link_libraries(DisplayDriver serialib)
 
-##add_library(DisplayDriverTask DisplayDriverTask.cpp)
-#target_include_directories(DisplayDriverTask PUBLIC ${PROJECT_SOURCE_DIR}/include)
-#target_link_libraries(DisplayDriverTask Task DisplayDriver)
+add_library(DisplayDriverTask DisplayDriverTask.cpp)
+target_include_directories(DisplayDriverTask PUBLIC ${PROJECT_SOURCE_DIR}/include)
+target_link_libraries(DisplayDriverTask Task DisplayDriver)
 
 
 add_subdirectory(gui)
