Det var den eksamen

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -24,3 +24,6 @@ target_link_libraries(display_task_example DisplayDriverTask)
 add_executable(TouchDisplayExample TouchDisplayExample.cpp)
 target_include_directories(TouchDisplayExample  PUBLIC ${PROJECT_SOURCE_DIR}/include)
 target_link_libraries(TouchDisplayExample TouchDisplaySDL2)
+
+add_executable(CashierTouchDisplayDemo CashierTouchDisplayDemo.cpp)
+target_link_libraries(CashierTouchDisplayDemo CashierTouchDisplayTask Event)
